# D0CXUN7R4C3

./: .gitignore  D0CXUN7R4C3.py  D0CXUN7R4C3.spec  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
gui/: gui.py  gui.ui  images_rc.py
gui/modules/core/: popup.py
gui/modules/document_loader/: from_gui.py  to_gui.py
gui/modules/gui_helpers/: other_options.py
gui/modules/initialize/: handlers.py  setup_ui.py  styles.py
modules/document/: document_file.py  document_properties.py
modules/helpers/: convert.py  xml.py
modules/time_tools/: time_diff.py
